# AutoProver

./: .gitignore  ARCHITECTURE.md  AUTOPROVE.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.autosetup.json  pyrightconfig.json  template_manifest.json
.github/workflows/: integration-tests.yml  pyright.yml  pytest.yml  sandbox-escape-6.1.yml
analyzer/: analysis.py
certora_autosetup/: fixconf.py  typechecker_loop.py
certora_autosetup/amenability/: __init__.py  cli.py  compile.py  context.py  report.py  scoring.py  weights.yaml
certora_autosetup/autosetup/: autosetup.py  cli.py
certora_autosetup/build_systems/: base.py  foundry.py  hardhat.py  hardhat_config_extractor.js
certora_autosetup/conf_runner/: callbacks.py  conf_runner.py
certora_autosetup/reporting/: reporter.py
certora_autosetup/setup/: auto_munges.py  call_resolution.py  clones_detection.py  creation_detection.py  function_summaries.json  native_value_transfers.py  oz_math_rounding.py  sanity.py  sanity_rule_generator.py  setup_prover.py  setup_summaries.py  summary_aggregator.py  summary_resolver.py
certora_autosetup/solidity_ast/: __init__.py  __main__.py  base.py  declarations.py  diagnostics.py  expressions.py  loader.py  statements.py  traversal.py  types.py  unions.py  yul.py
certora_autosetup/utils/: cloud_runner.py  compilation_workarounds.py  constants.py  enhanced_config_manager.py  job_problem_fixes.py  llm_util.py  local_runner.py  preprocessing_watchdog.py  prover_runner.py  prover_usage_ledger.py  remappings.py  runner_types.py  solc_version_resolver.py  types.py
composer/: bind.py  crucible_launch.py
composer/assistant/: codegen_launch.py  natspec_launch.py
composer/audit/: store.py  types.py
composer/chassis/: validation.py
composer/cli/: ap_trail.py  cache_autoprove.py  cache_natspec.py  console_codegen.py  console_foundry.py  live_autoprove.py  natspec_startup.py  tui_codegen.py  tui_foundry.py  tui_pipeline.py
composer/core/: context.py  state.py  validation.py
composer/crucible/: __init__.py  backend.py  cli.py  harness.py  pipeline.py  results.py  store.py
composer/cvl/: summary_audit.py
composer/diagnostics/: budget.py  cost_callback.py  debug.py  logging_setup.py  timing.py
composer/foundry/: artifacts.py  author.py  entry.py  env.py  pipeline.py  report.py  runner.py  state.py
composer/input/: files.py  parsing.py  (+1 more)
docs/: application-abstraction.md  command-sandbox.md  crucible-application.md  crucible-demo.md  crucible-foundry-parity.md  crucible-judge-cost.md  crucible-judge-in-loop.md  crucible-toolchain-versioning.md  crucible-unit-granularity.md  ecosystem-abstraction.md  formalization-abstraction.md  pr-split-plan.md  rag-import-format.md  rust-applications.md  rust-backend-api.md  rust-formalization-backends.md  rust-ioc-loop.md  rust-pure-app.md
rust/: .gitignore  Cargo.toml  README.md
rust/autoprover-sdk/: Cargo.toml
rust/autoprover-sdk/src/: lib.rs
rust/crucible-app/: Cargo.toml  askama.toml  crucible_kb.rag.json  pyproject.toml
rust/crucible-app/src/: lib.rs
rust/crucible-app/templates/: api_facts.j2  author_component.j2  author_setup.j2  backend_guidance.j2  cargo_deps.j2  cargo_toml.j2  example_fixture.j2  harness_cheat_sheet.j2  judge_guidance.j2  judge_instruction.j2  judge_system.j2  probe_fn.j2  revise_compile.j2  revise_judge.j2  test_cheat_sheet.j2
rust/example-app/: Cargo.toml  pyproject.toml
rust/example-app/src/: lib.rs
rust/run-confined/: Cargo.toml
rust/run-confined/src/: main.rs
sanity_analyzer/: analysis.py
scripts/: Dockerfile  Dockerfile.crucible  autoprove  autoprove-entrypoint.sh  autoprove_cache_explorer.py  debugConvo.py  docker-compose.crucible.yml  docker-compose.sandbox.yml  docker-compose.yml  install_solc.py  populate_crucible_rag.sh  populate_extended_rag.sh  populate_foundry_rag.sh  populate_rag.sh  snapshot_viewer.py
test_scenarios/solana_vault/: .gitignore  Cargo.toml  system.md
test_scenarios/solana_vault/programs/vault/: Cargo.toml
test_scenarios/solana_vault/programs/vault/src/: lib.rs
tests/: conftest.py  parallel-test.sh  test_agent_index.py  test_amenability.py  test_autoprove_integration.py  test_autoprove_report.py  test_autosetup_vacuity_prevention.py  test_codegen_integration.py  test_compilation_workarounds.py  test_compiler_flag_reconciliation.py  test_config_edit.py  test_crucible_e2e_gate.py  test_crucible_events.py  test_crucible_formalize_gate.py  test_crucible_gate.py  test_crucible_granularity.py  test_crucible_harness.py  test_crucible_rag.py  test_crucible_results.py  test_crucible_sandbox_gate.py  test_crucible_setup_gate.py  test_cvl_skips.py  test_cvlmath_asset.py  test_design_doc_finder.py  test_doc_finder.py  test_evm_version_reconciliation.py  test_foundry_config.py  test_foundry_runner.py  test_fuzzed_templates.py  test_generate_bytes_mappings_json.py  test_hardhat_config.py  test_kb_populate.py  test_main_harness.py  test_null_solana_backend.py  test_oz_math_rounding_unit.py  test_preprocessing_watchdog.py  test_prompt_snapshots.py  test_remappings.py  test_rule_skips.py  test_rust_frontend.py  (+21 more)
(+313 files in other folders)
