[package]
name = "example-app"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Demonstration AutoProver application in Rust (the 'echo prover'), built into a Python wheel."

[lib]
# MUST match the `export_app!` module ident and the maturin module name.
name = "echoprover"
crate-type = ["cdylib"]

[dependencies]
autoprover-sdk = { path = "../autoprover-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
# `extension-module` (don't link libpython) + `abi3-py312` (one wheel for cp312+).
pyo3 = { workspace = true, features = ["extension-module", "abi3-py312"] }
