[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "echoprover"
version = "0.1.0"
description = "Demonstration AutoProver application implemented in Rust."
requires-python = ">=3.12"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
# The compiled module is imported as `echoprover` (matches `export_app!(echoprover, …)`).
module-name = "echoprover"
# abi3 wheel — one artifact for cp312+.
features = ["pyo3/extension-module"]
