# Workspace for the lamports-vault example program. Built to sBPF with
# `cargo build-sbf` (→ target/deploy/vault.so), which the Crucible fuzz harness
# under fuzz/vault/ loads. Modeled on crucible's examples/escrow.
[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
